--- a/index.html
+++ b/index.html
@@ -1,9 +1,74 @@
 <!DOCTYPE html>
+<!-- Bruna färger, mörk brun top/meny, svart text, ljusbrun, beige kolumner vid behov?
+     turkos, teaL som textfärger? 
+     Dämpade färger, inget för skrikigt.
+
+     Bilder: Rykande kaffekopp
+            Bönor, olika rostningsgrad?
+             Kaffe med mjölk med mönster, ovanifrån
+             Kaffemaskin, espresso. Några olika
+             Kaffesäckar?
+             Mörk choklad, kaka med avbruten bit
+             Kaffeparty
+                Skålande koppar?
+                Glada gamänger
+
+             Bild VD
+             Bild HR
+
+    Karlssons Kaffeparty?
+    Mörkrost & sånt
+    Mörkrost & Co
+    Svart, rostad & arg/stark
+
+Ni har fått i uppdrag av ett nytänkande ungt företag vars kärnprocess är att leverera kaffe
+och kaffemaskiner till andra företag. De anordnar dessutom ett mycket omtyckt
+kaffeparty-event som både privatpersoner och företag kan beställa. På kaffepartyt
+presenteras en mängd olika kaffesorter som de får smaka tillsammans med mörk choklad
+och ges tillfälle att köpa produkterna.
+
+Tre sidor: “Index”, “Produkter” och “Om Oss”
+
+För samtliga sidor(3st):
+------------------------
+    ● Ett passande och enhetligt färgtema
+    ● Header; med logga eller företagsnamn ( eller båda).
+    ● Navbar; med länkar till samtliga sidor
+    ● Footer; med copyright datum och webmaster
+
+Index:
+------
+    ● Updelad i fyra huvud-divar
+        ○ Vilka är vi?
+        ○ Vad gör vi?
+        ○ Varför oss?
+        ○ Kaffeparty, så fungerar det!
+
+    ● Dess divar skall innehålla utfyllnadstexter & placeholderbilder.
+
+Produkter:
+----------
+    ● Separera Kaffeparty och Kaffemaskiner.
+    ● Lista kaffemaskiner, olika modeller med texter och bild.
+    ● Layouten ska vara delad i två delar.
+        ○ Kaffemaskiner
+            ■ Listar kaffemaskiner i ett rutnät
+            ■ Information, modell och pris syns tydligt
+        ○ Kaffeparty
+            ■ Uppdelad i två delar: Företag och Privatpersoner
+
+Om oss/Kontakt:
+---------------
+    ● Innehåller mer information om företaget.
+    ● Kontaktuppgifter med bild, telefonnummer, namn och e-post för VD
+    ● Kontaktuppgifter med bild, telefonnummer, namn och mejl för HR-ansvarig           
+-->
+
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Bootstrap Site</title>
+  <title>Mörkrost & Co</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
@@ -18,12 +83,12 @@
               </button>
               <div class="collapse navbar-collapse" id="navbarID">
                   <div class="navbar-nav">
-                      <a class="nav-link active" aria-current="page" href="#">Home</a>
+                      <a class="nav-link active" aria-current="page" href="#">Hem</a>
                       
                   </div>
               </div>
           </div>
       </nav>
-<h1>Hello-Bootstrap</h1>
+<h1>Mörkrost & Co</h1>
 </body>
 </html>
