Some serious stuff is happening.

--- a/index.html
+++ b/index.html
@@ -3,18 +3,17 @@
      turkos, teaL som textfärger? 
      Dämpade färger, inget för skrikigt.
 
-     Bilder: Rykande kaffekopp
-            Bönor, olika rostningsgrad?
-             Kaffe med mjölk med mönster, ovanifrån
-             Kaffemaskin, espresso. Några olika
-             Kaffesäckar?
-             Mörk choklad, kaka med avbruten bit
-             Kaffeparty
-                Skålande koppar?
-                Glada gamänger
+     Bilder: --Rykande kaffekopp
+            -- Bönor, olika rostningsgrad?
+             -- Kaffe med mjölk med mönster, ovanifrån
+             --Kaffemaskin, espresso. Några olika
+                          -- Mörk choklad, kaka med avbruten bit
+             --Kaffeparty
+               -- Skålande koppar?
+               -- Glada gamänger
 
-             Bild VD
-             Bild HR
+             --Bild VDcoffe
+             --Bild HR
 
     Karlssons Kaffeparty?
     Mörkrost & sånt
@@ -64,31 +63,79 @@ Om oss/Kontakt:
     ● Kontaktuppgifter med bild, telefonnummer, namn och mejl för HR-ansvarig           
 -->
 
-<html lang="en">
+<html lang="sv">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mörkrost & Co</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css" integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
-  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js" integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/" crossorigin="anonymous"></script>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Mörkt & gott</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/css/bootstrap.min.css"
+        integrity="sha384-r4NyP46KrjDleawBgD5tp8Y7UzmLA05oM1iAEQ17CSuDqnUK2+k9luXQOfXJCJ4I" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/5.0.0-alpha1/js/bootstrap.min.js"
+        integrity="sha384-oesi62hOLfzrys4LxRF63OJCXdXDipiYWBnvTl9Y9/TRlw5xlKIEHpNyvvDShgf/"
+        crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="Kaffe.css">
 </head>
+
 <body>
-    <nav class="navbar navbar-expand-sm navbar-light bg-primary">
-          <div class="container-fluid">
-              <a class="navbar-brand" href="#">primary</a>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarID"
-                  aria-controls="navbarID" aria-expanded="false" aria-label="Toggle navigation">
-                  <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarID">
-                  <div class="navbar-nav">
-                      <a class="nav-link active" aria-current="page" href="#">Hem</a>
-                      
-                  </div>
-              </div>
-          </div>
-      </nav>
-<h1>Mörkrost & Co</h1>
+    <nav class="navbar navbar-expand-sm navbar-light">
+        <div class="container-fluid">
+            <img src="Pictures/Hot_Coffee_Cup_PNG_Clipart_Image.png" alt="Drawing of a coffee cup" width="50 height="
+                50">
+            <a class="navbar-brand" href="#">Mörkt & gott</a>
+            <!-- <img src="Pictures/Hot_Coffee_Cup_PNG_Clipart_Image.png" alt="Drawing of a coffee cup" width="50 height="50"> -->
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarID"
+                aria-controls="navbarID" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarID">
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="index.html">Hem</a>
+                </div>
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="Produkter.html">Produkter</a>
+                </div>
+                <div class="navbar-nav">
+                    <a class="nav-link active" aria-current="page" href="OmOss.html">Om Oss</a>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <h1>Här står den första meningen som handlar om Karlsson & hans kaffekalas.</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm">
+                <h1>Vilka är vi?</h1>
+                <p>Och varför ger vi inte bara upp.</p>
+            </div>
+            <div class="col-sm">
+                <h1> Vad håller vi på med egentligen?</h1>
+                <p>Det här är inte människovärdigt.</p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm">
+                <h1>Varför vi?</h1>
+                <p>För att det inte finns något annat inom en 100mils radie. </p>
+            </div>
+            <div class="col-sm">
+                <h1>Kaffeparty, så funkar det!</h1>
+                <p>Häll sprit i kaffet, annars är det helt outhärdligt och lyssna på massa hipsters snacka kaffe.</p>
+            </div>
+        </div>
+    </div>
+    <div class="secondDiv">
+
+    </div>
+    <div class="thirdDiv">
+
+    </div>
+    <div class="fourthDiv">
+
+    </div>
 </body>
+
 </html>
