Lite småpill innan det nu äntligen är dags att sova lite.

--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@ Om oss/Kontakt:
             </div>
         </div>
     </nav>
-    <h1>Här står den första meningen som handlar om Karlsson & hans kaffekalas.</h1>
+    <h1>Vänd om och lämna medans ni fortfarande kan. Redan i företagsnamnet ljuger vi om två saker. Att det skulle vara mörkt. Eller att det skulle vara gott.</h1>
+    <p>Det är allt annat än gott, minns ett riktigt brunt fimpberikat vatten som jag som 5-åring drack från en vattenpöl. Det var rena lyxen jämfört med det vi försöker lura på er här.</p>
+    <p></p>
     <div class="container">
         <div class="row">
             <div class="col-sm">
@@ -136,6 +138,9 @@ Om oss/Kontakt:
     <div class="fourthDiv">
 
     </div>
+    <footer>
+        Copyright 240403. Made by:  JKL nonsense and consulting. 
+    </footer>
 </body>
 
 </html>
