More done. Om oss/kontakt.

--- a/index.html
+++ b/index.html
@@ -105,27 +105,31 @@ Om oss/Kontakt:
         </div>
     </nav>
     <h1>Vänd om och lämna medans ni fortfarande kan. Redan i företagsnamnet ljuger vi om två saker. Att det skulle vara mörkt. Eller att det skulle vara gott.</h1>
-    <p>Det är allt annat än gott, minns ett riktigt brunt fimpberikat vatten som jag som 5-åring drack från en vattenpöl. Det var rena lyxen jämfört med det vi försöker lura på er här.</p>
+    <p>Det är allt annat än gott, minns ett riktigt brunt, kraftigt fimpberikat vatten som jag som 5-åring drack från en vattenpöl. Det var rena lyxen jämfört med det vi försöker lura på er här.</p>
     <p></p>
     <div class="container">
         <div class="row">
             <div class="col-sm">
                 <h1>Vilka är vi?</h1>
                 <p>Och varför ger vi inte bara upp.</p>
+                <img src="Pictures/Exhaustef.jpg">
             </div>
             <div class="col-sm">
                 <h1> Vad håller vi på med egentligen?</h1>
                 <p>Det här är inte människovärdigt.</p>
+                <img src="Pictures/No.jpg">
             </div>
         </div>
         <div class="row">
             <div class="col-sm">
                 <h1>Varför vi?</h1>
                 <p>För att det inte finns något annat inom en 100mils radie. </p>
+                <img src="Pictures/hell.jpg">
             </div>
             <div class="col-sm">
                 <h1>Kaffeparty, så funkar det!</h1>
                 <p>Häll sprit i kaffet, annars är det helt outhärdligt och lyssna på massa hipsters snacka kaffe.</p>
+                <img src="Pictures/f2.jpg"> 
             </div>
         </div>
     </div>
