--- a/OmOss.html
+++ b/OmOss.html
@@ -79,7 +79,7 @@ Om oss/Kontakt:
             </div>
         </div>
     </div>
-    <div class="secondDiv">
+    <!-- <div class="secondDiv">
 
     </div>
     <div class="thirdDiv">
@@ -87,7 +87,7 @@ Om oss/Kontakt:
     </div>
     <div class="fourthDiv">
 
-    </div>
+    </div> -->
     <footer>
         Copyright 240403. Made by:  JKL nonsense and consulting. 
     </footer>
